Fix MSVC warnings November 2023 edition https://bugs.webkit.org/show_bug.cgi?id=263689

Reviewed by Fujii Hironori.

Fix MSVC warnings around types.

* Source/JavaScriptCore/assembler/X86Assembler.h:
(JSC::X86Assembler::replaceWithNops):
* Source/JavaScriptCore/wasm/WasmCallee.cpp:
(JSC::Wasm::IPIntCallee::IPIntCallee):
* Source/WebCore/dom/TreeScopeOrderedMap.cpp:
(WebCore::TreeScopeOrderedMap::get const):
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::hitTestClipPath const):

Canonical link: https://commits.webkit.org/271031@main